# django-musicplatform

./: .env.dist  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
albums/: admin.py  filters.py  forms.py  models.py  pagination.py  serializers.py  tasks.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_album_is_approved.py  0003_alter_album_creation_date.py  0004_alter_album_creation_date.py  0005_alter_album_creation_date_alter_album_is_approved.py  0006_alter_album_creation_date.py  0007_alter_album_creation_date.py  0008_alter_album_creation_date_alter_album_is_approved.py  0009_alter_album_creation_date.py  0010_remove_album_creation_date_album_created_and_more.py  0011_alter_album_cost_song.py  0012_alter_song_name.py  0013_alter_song_image.py  0014_song_audio_file_alter_song_image_alter_song_name.py  0015_alter_song_audio_file.py  0016_alter_album_release_date.py  0017_alter_album_release_date.py  0018_alter_album_cost.py
albums/templates/: album_form.html
albums/tests/: test_serializer.py  test_views.py
albums/validators/: validators.py
artists/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_alter_artist_options_alter_artist_social_link.py  0003_artist_user.py
artists/templates/: artist_form.html  index.html
authentication/: serializers.py  urls.py  views.py
musicplatform/: RESULTS.md  celery.py  settings.py  urls.py
templates/: base_generic.html
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
(+13 files in other folders)
