[tool.poetry]
name = "ahmedgamal-task1-django"
version = "0.1.0"
description = ""
authors = ["Ahmed Gamal <ahmedgamal.ssaleh@gmail.com>"]
readme = "README.md"
packages = [{include = "ahmedgamal_task1_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
django-model-utils = "^4.2.0"
django-bootstrap-v5 = "^1.0.11"
django-imagekit = "^4.1.0"
pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
