[tool.poetry]
name = "ahmedgamal-task1-django"
version = "0.1.0"
description = ""
authors = ["Ahmed Gamal <ahmedgamal.ssaleh@gmail.com>"]
readme = "README.md"
packages = [{include = "ahmedgamal_task1_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
django-model-utils = "^4.2.0"
django-bootstrap-v5 = "^1.0.11"
django-imagekit = "^4.1.0"
pillow = "^9.2.0"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"
django-rest-knox = "^4.2.0"
django-extensions = "^3.2.1"
pyparsing = "^3.0.9"
pydot = "^1.4.2"
graphviz = "^0.20.1"
pytest = "^7.2.0"
pytest-django = "^4.5.2"
celery = {extras = ["redis"], version = "^5.2.7"}
redis = "^4.3.4"
django-celery-results = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
